tests/rosetta/out/Smalltalk/call-a-function-5.out
Object: '' error: Invalid argument 1: must be a Character
SystemExceptions.WrongClass(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:778)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:774)
String(Object)>>checkIndexableBounds:put: (Object.st:825)
String>>at:put: (String.st:329)
[] in String(SequenceableCollection)>>replaceFrom:to:with: (SeqCollect.st:574)
[] in Dictionary>>do: (Dictionary.st:357)
Dictionary(HashedCollection)>>do: (HashedColl.st:201)
Dictionary>>do: (Dictionary.st:357)
String(SequenceableCollection)>>replaceFrom:to:with: (SeqCollect.st:574)
Dictionary(Collection)>>asString (Collection.st:438)
optimized [] in UndefinedObject>>executeStatements (/tmp/call-a-function-5.st:12)
UndefinedObject>>executeStatements (/tmp/call-a-function-5.st:13)
