tests/rosetta/out/Smalltalk/call-a-function-5.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| doIt b main p |
doIt := [:p | b := 0.
((p includes: 'b')) ifTrue: [
b := p at: 'b'.
] .
((((p at: 'a') + b)) + (p at: 'c')). ].
main := [ p := Dictionary from:{}.
p at: 'a' put: 1.
p at: 'c' put: 9.
Transcript show: ((doIt value: p asString)) printString; cr. ].
main value.
